--- a/JScalc/index.html
+++ b/JScalc/index.html
@@ -20,7 +20,7 @@
         <div class="col-md-6 mx-auto">
           <div class="card card-body text-center mt-5">
             <h1 class="heading display-5 pb-3">Pokemon Profit</h1>
-            <form id="loan-form">
+            <form id="loan-form" onsubmit="return false">
               <div class="form-group">
                 <div class="input-group">
                   <span class="input-group-addon" style="padding-right:2.5rem">Selling Price</span>
@@ -39,12 +39,12 @@
                   <input type="number" class="form-control" id="years" placeholder="Investment Cost">
                 </div>
               </div>
-              <div class="form-group">
+              <!-- <div class="form-group">
                 <div class="input-group">
                   <span class="input-group-addon" style="padding-right:3.1rem">Break Even</span>
                   <input type="number" class="form-control" id="break-even" placeholder="Number to Break Even">
                 </div>
-              </div>
+              </div> -->
               <div class="form-group">
                 <div class="input-group">
                   <span class="input-group-addon" style="padding-right:5.5rem">Profit</span>
@@ -63,9 +63,9 @@
               <div class="form-group">
                 <input type="submit" value="Calculate Selling Price" class="btn4 btn btn-dark btn-block">
               </div>
-              <div class="form-group">
+              <!-- <div class="form-group">
                 <input type="submit" value="Calculate Break Even Number" class="btn5 btn btn-dark btn-block">
-              </div>
+              </div> -->
             </form>
             
             <!-- LOADER -->
